<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainMenuActivity" >

    <Button
        android:id="@+id/exit_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/return_to_app_string"
        android:textColor="@color/red" />
    
    <Button
        android:id="@+id/naseem_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutIntro"
        android:layout_alignParentLeft="true"
        android:text="@string/name_naseem"
        android:textColor="@color/black" />
    
    <Button
        android:id="@+id/praveen_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/naseem_button"
        android:layout_alignParentLeft="true"
        android:text="@string/name_praveen"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/sumit_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/praveen_button"
        android:layout_alignParentLeft="true"
        android:text="@string/name_sumit"
        android:textColor="@color/black" />
    
    <Button
        android:id="@+id/rahul_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sumit_button"
        android:layout_alignParentLeft="true"
        android:text="@string/name_rahul"
        android:textColor="@color/black" />
    
    <TextView
        android:id="@id/aboutIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"        
        android:text="@string/about_title"
        android:textColor="@color/blue"
        android:textSize="20sp" 
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>