<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black"
    tools:context=".ViewAddTaskActivity" 
    >   
    
    <TextView
        android:id="@+id/add_task_title"        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"  
        android:layout_centerHorizontal="true"                                     
        android:text="@string/add_tasks_title"
        android:textSize="25sp"
        android:textColor="@color/darkblue" 
        />
    
    <EditText
        android:id="@+id/task_name"        
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"                                 
        android:hint="@string/add_task_hint"
        android:textColor="@color/blue"
        android:textSize="20sp"         
        /> 
    
    <Button
        android:id="@+id/add_task_button"        
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/task_name"                                
        android:text="@string/add_task"                 
        />              
    
    <Button
        android:id="@+id/cancel_button"        
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_task_button"                                
        android:text="@string/cancel_string" 
        />    
</RelativeLayout>