<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:contentDescription="@string/name_sumit"
        android:src="@drawable/s_photo" />
    
    <TextView
        android:id="@+id/data_sumit1"        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"  
        android:layout_below="@id/imageView1"                                     
        android:text="@string/name_sumit"        
        />

    <TextView
        android:id="@+id/data_sumit2"        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"  
        android:layout_below="@id/data_sumit1"                                     
        android:text="@string/about_dev31"        
        />
    
    <TextView
        android:id="@+id/data_sumit3"        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"  
        android:layout_centerHorizontal="true"
        android:layout_below="@id/data_sumit2"                                     
        android:text="@string/name_p3"        
        />
    
    <Button
        android:id="@+id/exit_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/return_to_app_string"
        android:textColor="@color/red" />
    
</RelativeLayout>